--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6669588527227880"
-     crossorigin="anonymous"></script>
-</head>
-<body>
-<h1>Development IA</h1>
-<p>Timbiriche Game</p>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6669588527227880" crossorigin="anonymous"></script><title>anardzm53</title><script defer="defer" src="/static/js/main.8e9fd8bb.js"></script><link href="/static/css/main.073c9b0a.css" rel="stylesheet"></head><body><h1>Development IA</h1><p>Timbiriche Game</p></body></html>
